# AgentPay

./: .env.example  .gitignore  README.md  SECURITY_HARDENING.md  analyze_imports.py  check_imports.py  demo.py  docker-compose.staging.yml  final_analysis.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_imports.py
.github/workflows/: ci.yml
agentpay_sdk/: __init__.py  client.py  exceptions.py
app/api/middleware/: auth.py
app/api/routers/: agents.py  sponsor.py  wallets.py
app/blockchain/: __init__.py  base.py  kms_key_manager.py  mock.py  web3_client.py
app/core/: config.py  database.py
app/models/: __init__.py  agent.py  idempotency_key.py  invoice.py  payment.py  transaction.py  wallet.py  webhook.py
app/monitoring/: sponsorship_metrics.py
app/schemas/: agent.py
app/services/: agent.py  base.py  gas_sponsorship.py  payment.py
app/utils/: circuit_breaker.py
monitoring/: grafana-dashboard.json  prometheus.yml
scripts/: create-kms-key.sh  load-test-kms.py  validate-environment.sh
tests/: test_agent_routes.py  test_kms_key_manager.py  test_payment_flow.py  test_wallet_routes.py
