[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpay"
version = "1.0.0"
description = "On-Chain Identity + Payment Infrastructure for AI Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "web3==7.14.1",
    "eth-account==0.13.7",
    "eth-typing==5.2.1",
    "redis>=4.5.2,<5.0.0",
    "slowapi>=0.1.9",
    "httpx==0.25.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pyjwt==2.8.0",
    "cryptography==41.0.7",
    "celery[redis]==5.3.4",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "aiohttp==3.9.1",
    "tenacity==8.2.3",
    "structlog==23.2.0",
    "boto3>=1.34.0",
    "prometheus-client>=0.19.0",
    "eth-keys>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "mypy==1.8.0",
    "flake8==7.0.0",
    "black==24.2.0",
    "isort==5.13.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
addopts = [
    "-v",
    "--cov=app",
    "--cov-report=xml",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "web3.*",
    "eth_account.*",
    "celery.*",
]
ignore_missing_imports = true